# bilive-chat

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
src/: lib.rs  main.rs
src/bilibili/: mod.rs
src/bilibili/web_live/: auth.rs  commands.rs  connection.rs  http.rs  mod.rs  parser.rs  socket.rs
src/chat/: event.rs  filter.rs  mod.rs
src/config/: mod.rs  types.rs
src/overlay/: event.rs  mod.rs  server.rs  state.rs  ws.rs
tests/: smoke.rs
web/: overlay.css  overlay.html  overlay.js  panel.css  panel.html  panel.js
