[package]
name = "bilive-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3"
reqwest = "0.12"
tokio-tungstenite = "0.26"
