[package]
name = "bilive-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
bytes = "1"
md-5 = "0.10"
hex = "0.4"
urlencoding = "2"
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.26"
